fixing text overflow notif

--- a/src/components/Nofitikasi/Notifikasi.css
+++ b/src/components/Nofitikasi/Notifikasi.css
@@ -4,7 +4,7 @@
   width: 100%;
 }
 
-.container-date-notifikasi{
+.container-date-notifikasi {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -22,13 +22,19 @@
   color: #8a8a8a;
 }
 
+.namaproduct-seller {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .waktu_notifikasi-mobile {
   font-size: 12px;
   color: #8a8a8a;
 }
 
 @media screen and (min-width: 320px) {
-  .waktu_notifikasi{
+  .waktu_notifikasi {
     display: none;
   }
 }
