--- a/src/components/NotifikasiBuyer/NotifikasiBuyer.css
+++ b/src/components/NotifikasiBuyer/NotifikasiBuyer.css
@@ -1,11 +1,29 @@
+.container-notifikasibuyer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+@media screen and (min-width: 320px) {
+  .waktu_notifikasi-buyer{
+    display: none;
+  }
+}
 .status_notifikasi {
   font-size: 12px;
   color: #8a8a8a;
 }
 
-.waktu_notifikasi {
+.waktu_notifikasi-buyer-mobile {
   font-size: 12px;
   color: #8a8a8a;
+}
+
+.namaproduct-buyer{
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .gambar_produk_notif {
